styles/mobile.css
/* Definição da fonte personalizada "Tempting" */
@font-face {
    font-family: Tempting;
    src: url(../assets/fonts/Tempting.woff);
}

/* Definição da fonte personalizada "Hallie" */
@font-face {
    font-family: Hallie;
    src: url(../assets/fonts/Hallie.otf);
}

/* Definição da fonte personalizada "Gilroy" */
@font-face {
    font-family: Gilroy;
    src: url(../assets/fonts/Gilroy.ttf);
}

/* Definição da fonte personalizada "BebasNeue" */
@font-face {
    font-family: BebasNeue;
    src: url(../assets/fonts/BebasNeue.otf);
}

/* Propriedade global para o documento, desabilitando rolagem horizontal */
html {
    overflow-x: hidden;
}

/* Estilos globais para o body da página */
body {
    margin: 0;
    padding: 0;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    background-image: url('../assets/img/background-01.webp');
    background-size: 100%;
    background-position: top center;
    background-repeat: no-repeat;
    background-attachment: scroll;
    position: relative;
}

/* Wrapper para simular um dispositivo móvel */
.content {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50%;
    height: 100%;
}

/* Divisor usado para espaçamento */
.divisor {
    width: 100%;
    height: 50px;
}

/* Container principal da seção 01 */
.container-01 {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 0;
    margin: 0;
    margin-top: 70cqw;
    flex: 1;
}

/* Ajustando o espaçamento entre os textos */
.texto-01 .subtitle {
    margin: 0;
    margin-bottom: -5px;
    line-height: 1.5;
    transform: scaleY(1.3);
}

/* Ajustes de margem e espaçamento nos textos h2 */
.texto-01 .tittle {
    margin: 0;
    line-height: 1.0;
    transform: scaleY(1.2);
}

/* Estilos para o container das imagens */
.imagem-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 10px;
    margin-bottom: 25px;
    position: relative;
    width: 100%;
    padding: 3%;
}

/* Estilos para a imagem dentro do container */
.imagem {
    width: 124px;
    height: 165;
    border-radius: 20px;
    margin-left: -20px;
}

/* Estilo adicional para a segunda imagem, movendo-a para baixo */
.imagem:nth-child(2) {
    margin-top: 40px;
}

/* Estilos para o container de estrelas */
.estrelas {
    width: 20cqw;
    display: block;
    margin: 0 auto;
}

/* Estilos para a segunda seção de texto */
.texto-02 {
    text-align: center;
    margin: 0;
    line-height: 0;
    margin-bottom: 50px;
    transform: scaleY(1.3);
}

/* Estilos para o container de chamada para ação */
.container-action-call {
    background-color: #D4FBFF;
    padding: 20px;
    margin: 0;
    border-radius: 30px;
    text-align: center;
    width: 100cqw;
    box-sizing: border-box;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
}

/* Layout de grid para dividir o conteúdo */
.content-grid {
    display: grid;
    grid-template-columns: 1.2fr 1fr;
    gap: 20px;
    width: 100%;
}

/* Estilos para a coluna da esquerda */
.left-side {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

/* Estilos para itens de texto */
.text-item {
    display: flex;
    align-items: flex-start;
    gap: 10px;
    color: #001C57;
    font-family: Gilroy;
    font-size: 2.7cqw;
    text-align: left;
    margin-bottom: -20px;
}

/* Estilos para o ícone */
.icon {
    width: 12px;
    height: 12px;
    vertical-align: top;
    margin-top: 6%;
    border-radius: 100px;
}

/* Estilos para a coluna da direita */
.right-side {
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Estilos para a capa do eBook */
.ebook-cover {
    position: absolute;
    right: -10%;
    top: 42%;
    transform: translateY(-50%);
    z-index: 10;
    max-width: none;
    width: 70cqw;
}

.button-link {
    text-decoration: none;
    color: inherit;
}

/* Container para o botão de compra */
.buy-button-container {
    margin-top: 40px;
}

/* Estilos para o botão de compra */
.buy-button {
    background-color: #2DC141;
    color: #fff;
    border: none;
    padding: 5px 20px;
    border-radius: 2px;
    cursor: pointer;
    font-size: 7.5cqw;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 7px;
    font-family: BebasNeue;
    margin-bottom: 20px;
}

/* Estilos ao passar o mouse sobre o botão de compra */
.buy-button:hover {
    background-color: #1fa731;
}

/* Container principal do carrossel */
.carousel-container {
    width: 100cqw;
    overflow: hidden;
    margin: 0 auto;
}

/* Container do carrossel */
.carousel-title {
    transform: scaleY(1.3);
    text-align: center;
    font-size: 8cqw;
    color: #001C57;
    margin: 20px 0;
    font-family: Hallie;
    line-height: 0.5;
}

/* Carrosel */
.carousel {
    margin-top: 30px;
    display: flex;
    transition: transform 0.5s ease-in-out;
}

/* Conteúdo do Carrosel */
.carousel-slide {
    position: relative;
    min-width: 100cqw;
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Imagem do Carrosel */
.carousel-slide img {
    width: 80cqw;
    height: 60cqw;
    object-fit: cover;
    border-radius: 40px;
    margin: 0 10px;
    display: block;
}

/* Estilos para a legenda */
.carousel-caption {
    position: absolute;
    bottom: 10px;
    left: 50px;
    color: #ffffffbb;
    padding: 5.3px 10px;
    font-size: 4.5cqw;
    max-width: 90%;
    box-sizing: border-box;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    z-index: 1;
    font-family: Hallie;
    transform: scaleY(1.3);
}
/* ... */

